# CalFuse

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml
eval/: ablate_cal_size_arguana.json  ablate_cal_size_nfcorpus.json  ablate_cal_size_scifact.json  ablate_calibrator_arguana.json  ablate_calibrator_nfcorpus.json  ablate_calibrator_scifact.json  ablate_dependence_threshold.json  baselines_v1.json  beir_arguana_results.json  beir_arguana_results.npz  beir_arguana_results_monot5.json  beir_arguana_results_monot5.npz  beir_fiqa_results.json  beir_fiqa_results.npz  beir_fiqa_results_monot5.json  beir_fiqa_results_monot5.npz  beir_loader.py  beir_nfcorpus_results.json  beir_nfcorpus_results.npz  beir_nfcorpus_results_monot5.json  beir_nfcorpus_results_monot5.npz  beir_scidocs_results.json  beir_scidocs_results.npz  beir_scifact_results.json  beir_scifact_results.npz  beir_scifact_results_monot5.json  beir_scifact_results_monot5.npz  beir_touche-2020_results.json  beir_touche-2020_results.npz  beir_trec-covid_results.json  beir_trec-covid_results.npz  beir_trec-covid_results_monot5.json  beir_trec-covid_results_monot5.npz  benchmark_v1.jsonl  build_benchmark.py  conformal_envelope_coverage.json  conformal_sequential_eprocess.json  copula_regime.json  cross_dataset_drift.json  diagnostics_beir.json  (+33 more)
scripts/: ablate_cal_size.py  ablate_calibrator.py  ablate_dependence_threshold.py  abstention_and_rank_analysis.py  conformal_on_beir.py  copula_regime_simulation.py  cross_dataset_drift.py  diagnostics_on_beir.py  eval_from_npz.py  evaluate_beir.py  ivap_downstream_eval.py  (+19 more)
(+65 files in other folders)
