[project]
name = "calfuse"
version = "0.1.0"
description = "Calibration-aware fusion of heterogeneous retrieval signals"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "scikit-learn>=1.3",
    "tqdm>=4.66",
]

[project.optional-dependencies]
full = [
    "torch>=2.1",
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "datasets>=2.18",
    "accelerate>=0.27",
    "ir-datasets>=0.5",
    "beir>=2.0",
    "netcal>=1.3",
    "datasketch>=1.6",
    "networkx>=3.2",
    "rank-bm25>=0.2.2",
    "matplotlib>=3.8",
]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py310"
